--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AIRTO</title>
+  <title>ChatGPT Web App</title>
 </head>
 <body>
-  <h1>AI4TO: Breast Cancer Patient Support</h1>
-  <textarea id="userInput" placeholder="Ask a question..."></textarea>
-  <button onclick="sendMessage()">Send</button>
-  <pre id="responseOutput"></pre>
+  <h1>Ask ChatGPT</h1>
+  <textarea id="input" rows="5" cols="50" placeholder="Type your message..."></textarea><br>
+  <button onclick="askChatGPT()">Send</button>
+  <pre id="output"></pre>
+
   <script src="script.js"></script>
 </body>
 </html>
